@@ -104,6 +104,10 @@ AC_DEFUN([GNOME_INIT_HOOK],[
 		AC_SUBST(GNOME_APPLETS_LIBS)
 		GNOME_APPLETS_LIBS=`$GNOME_CONFIG --libs-only-l applets`
 		AC_MSG_RESULT($GNOME_APPLETS_LIBS);;
+	      docklets)
+		AC_SUBST(GNOME_DOCKLETS_LIBS)
+		GNOME_DOCKLETS_LIBS=`$GNOME_CONFIG --libs-only-l docklets`
+		AC_MSG_RESULT($GNOME_DOCKLETS_LIBS);;
 	      capplet)
 		AC_SUBST(GNOME_CAPPLET_LIBS)
 		GNOME_CAPPLET_LIBS=`$GNOME_CONFIG --libs-only-l capplet`
